--- a/modelpulse-backend/requirements.txt
+++ b/modelpulse-backend/requirements.txt
@@ -6,3 +6,11 @@ psycopg2-binary==2.9.6
 pydantic==1.10.7
 requests==2.29.0
 python-dotenv==1.0.0
+numpy==1.24.3
+pandas==2.0.1
+scipy==1.10.1
+scikit-learn==1.2.2
+python-jose==3.3.0
+passlib==1.7.4
+python-multipart==0.0.6
+bcrypt==4.0.1
